<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HomePlan</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_home_profile">HomeProfileActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_mutate_user">MutateUserActivityActivity</string>
    <string name="title_activity_create_new_task">Maak nieuwe taak</string>
    <string name="activity_name_text">Naam activiteit</string>
    <string name="activity_duration_text">Duur activiteit</string>
    <string name="save_button_text">Opslaan</string>
    <string name="add_user_activity">Beheer activiteiten</string>
    <string name="email">Email</string>
    <string name="login">Log in</string>
    <string name="register">Registreer</string>
    <string name="activity_icon">Icoon activiteit</string>
    <string name="change_avatar">Verandering profielfoto</string>
    <string name="name">Naam</string>
    <string name="save_changes">Wijzigingen opslaan</string>
    <string name="password">Wachtwoord</string>
    <string name="confirm_password">Bevestig wachtwoord</string>
    <string name="choose_avatar">Kies profielfoto</string>
    <string name="add_new_activity_text">Voeg nieuwe activiteit toe</string>
    <string name="title_activity_planning_generator">PlanningGeneratorActivity</string>
    <string name="title_activity_select_user_activities">SelectUserActivitiesActivity</string>
    <string name="adjust_day_length">Pas lengte van dag aan</string>
    <string name="title_activity_day_overview">DayOverviewActivity</string>
    <string name="incidental_break">Incidentele break</string>
    <string name="take_planned_break">Neem geplande pauze</string>
    <string name="skip_planned_break">Skip geplande pauze</string>
    <string name="share_a_picture">Deel een afbeelding</string>
    <string name="begintijd">Begintijd</string>
    <string name="eindtijd">Eindtijd</string>
    <string name="activiteiten_voor_werkdag">Activiteiten voor werkdag</string>
    <string name="beheer_activiteiten">Beheer activiteiten</string>
    <string name="begin_werkdag">Begin werkdag</string>
    <string name="maakfoto">Maak foto van een activiteit</string>

</resources>
