<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.teamhomeplan.homeplan.MutateUserActivityActivity"
    android:id="@+id/useractivitymutate_activity"
    android:background="@drawable/diagmonds">

    <include android:id="@+id/mutateua_loader" layout="@layout/loader"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/activity_name_text"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/text" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/useractivitymutate_Name"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:textColor="@color/text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/activity_icon"
        android:id="@+id/textView7"
        android:layout_below="@+id/useractivitymutate_Name"
        android:layout_alignParentStart="true"
        android:textColor="@color/text" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/useractivitymutate_Icon"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:textColor="@color/text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/activity_duration_text"
        android:id="@+id/textView8"
        android:layout_below="@+id/useractivitymutate_Icon"
        android:layout_alignParentStart="true"
        android:textColor="@color/text" />

    <TimePicker
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        android:id="@+id/useractivitymutate_timepicker"
        android:layout_below="@+id/textView8"
        android:numbersTextColor="@color/text"
        android:amPmTextColor="@color/text"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button_text"
        android:id="@+id/useractivitymutate_btnSave"
        android:layout_below="@+id/useractivitymutate_timepicker"
        android:layout_centerHorizontal="true"
        android:textColor="@color/text"
        android:background="@color/buttonbackground"
        android:layout_marginTop="33dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/useractivitymutate_lblError"
        android:layout_below="@+id/useractivitymutate_btnSave"
        android:layout_toEndOf="@+id/textView8"
        android:layout_marginTop="43dp"
        android:textColor="@color/text" />

</RelativeLayout>
